--- a/app/views/expeditions/index.html.erb
+++ b/app/views/expeditions/index.html.erb
@@ -18,3 +18,33 @@
 
 
 
+<script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.28.0/mapbox-gl.js'></script>
+<link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.28.0/mapbox-gl.css' rel='stylesheet' />
+<style>
+body { margin:0; padding:0;  }
+#map { position:absolute; top:0; bottom:0; width:100%;  }
+</style>
+<script src='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v2.0.1/mapbox-gl-geocoder.js'></script>
+<link rel='stylesheet' href='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v2.0.1/mapbox-gl-geocoder.css' type='text/css' />
+
+<div id='map'></div>
+<script>
+
+mapboxgl.accessToken = 'pk.eyJ1Ijoia3lwaGFlIiwiYSI6ImNpdzZyOHhxbTAwMHoydHFwMDhqNHI4Z2YifQ.gbBkr7hxt4NuJfNg2-S43w';
+var map = new mapboxgl.Map({
+  container: 'map', // container id
+  style: 'mapbox://styles/mapbox/satellite-streets-v9',
+  center: [-74.50, 40], // starting position
+  zoom: 9 // starting zoom
+
+});
+
+// Add zoom and rotation controls to the map.
+map.addControl(new mapboxgl.NavigationControl());
+
+new L.Control.Zoom({ position: 'topleft'  }).addTo(map);
+
+map.addControl(new MapboxGeocoder({
+      accessToken: mapboxgl.accessToken
+}));
+</script>
